# FirstByte-LLM-Proxy

./: .gitignore  LICENSE  README.md  compose.yml
backend/: direct_latencies.json  plot_results.py  prompts.json  proxy_latencies.json  pyproject.toml  test.py
proxy/: Dockerfile  go.mod  main.go
